Fix dabbing being off screen

--- a/public/global.css
+++ b/public/global.css
@@ -7,16 +7,10 @@
         format("woff");
 }
 
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
 body {
 	color: limegreen;
     background: #000;
-	margin: 0;
+	margin: 2em auto;
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: Source Code Pro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
